@@ -38,6 +38,8 @@ xx/xx/2005 - 1.12.0-WIP
 	  it to be present.  (Christophe)
 	- ntfscluster: fix incorrect volume usage calculation.  (Szaka)
 	- ntfscluster, utils.c::mft_next_record(): fix gigaleak.  (Szaka)
+	- Define PATH_MAX if not defined in ntfsprogs/ntfsmount.c and
+	  libntfs/volume.c.  Needed to compile on DOS with djgpp.  (Christophe)
 
 08/08/2005 - 1.11.2 - ntfsdecrypt now works and lots of fixes and improvements.
 
